[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.demucs"
version = "0.0.4"
description = "Demucs is a music source separation model that can separate drums, bass, vocals, and other instruments"
readme = "README.md"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "demucs",
    "torchaudio>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.demucs"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
